<?xml version="0.1.1"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_inference_manager</name>
  <version>0.1.1</version>
  <description>Dependency library of qrb_ros_nn_inference</description>
  <maintainer email="nasong@qti.qualcomm.com">Na Song</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
