<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_pre_process_with_dma</name>
  <version>0.0.1</version>
  <description>ROS2 pre-processing node for depth estimation using DMA-BUF</description>

  <maintainer email="dev@qualcomm.com">Qualcomm</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <depend>qrb_ros_tensor_list_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
